--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 body{
     padding: 0;
     margin: 0;
+    overflow-x: hidden;
     box-sizing: border-box;
     background-color: #212529!important;
     font-family: 'Roboto', sans-serif;
@@ -113,7 +114,7 @@ header{
     text-decoration: underline;
 }
 .learn h1{
-    font-size: 6rem;
+    font-size: 4rem;
     margin-bottom: 2rem;
 }
 .learn p{
