--- a/my-app/src/components/Hello/hello.css
+++ b/my-app/src/components/Hello/hello.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans&display=swap');
+
 .learn{
     display: flex;
     flex-direction: column;
@@ -71,9 +73,51 @@
     
     background-color: #34363b;
 }
+.numeros-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .numeros-info h3{
     color: #FFB742;
     text-align: center;
+}
+.container_egg{
+    position: absolute;
+}
+.egg{
+    position: relative;
+    top: -57px;
+    left: 124px;
+    transform: rotate(25deg);
+    font-family: 'Kumbh Sans';
+
+}
+.ponteir{
+    cursor: pointer;
+}
+.GithubLinkContainer{
+    color: white;
+    text-decoration: none;
+}
+@media (max-width:768px) {
+    .egg{
+        display: flex;
+        font-size: 15px;
+        font-family: 'Kumbh Sans';
+        transform: none;
+        top: 0;
+        left: 0;
+        opacity: 0.4;
+    }
+    .container_egg{
+        position:unset;
+    }
+    .numeros-info p {
+        font-weight: bold;
+        text-align: center;
+    }
 }
 .numeros-info p {
     font-weight: bold;
