--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap');
 /*header*/
-
+.whatsapp-button {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25D366;
+    color: white;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+    font-size: 24px;
+    z-index: 1000;
+}
+.whatsapp-button img {
+    width: 35px;
+    height: 35px;
+}
 body{
     padding: 0;
     margin: 0;
